This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
8/2/23: Replaced Microsoft validation of text fields, which was giving "Enter
a number" errors on some systems, in Montage Setup, Tilt Series Setup,
Navigator Acquire, and  Multiple Record setup dialog.

8/2/23: When using "Eucentric-Both" in Low Dose, it will now switch between
Search and View if appropriate for the fine operation.

7/24/23: Prevented recursive variable substitutions; only variables originally
present in a line will be substituted.

7/22/23: Added option to multi-hole combiner to use just the position of the
central point instead of averaging positions from all points in a pattern, and
stabilized the point labels so they stay in same position.

7/22/23: Fixed Ctrl-Left click for selecting a point by changing the new map
loading to Shift-Middle-double click.

7/22/23: Added a CUDA 6 FrameGPU.dll, posted CUDA library packages, and
modified installer to update with the correct FrameGPU.dll.

7/22/23: Add script command to set any lens on Hitachi.

7/21/23: Preliminary support for Gatan Metro camera.

7/21/23: Allowed StringArrayToScript to be used from Python and fixed
StartNavAcquireAtEnd to select the right main action if dialog was never
opened.

7/21/23: When a transformation is done with registration points from an
imported map to another map, the Z value of that map will be assigned to items
drawn on the imported map.

7/21/23: Added script command to save graph from ctfplotter and show it in a
buffer (requires IMOD 4.12.51).

7/21/23: Added script command to report free disk space.

7/21/23: Allowed montage to take K2/K3 frames with subarea.

7/17/23: Fixed crash during Navigator tilt series acquisition if program
started with setting for groups collapsed.
